going on ass yet

--- a/index.html
+++ b/index.html
@@ -3,15 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASSIGNMENT#1 PERSONAL WEBSITE</title>
+    <title>PERSONAL WEBSITE ASSIGNMENT#1_PH </title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <div>
+    <section class="intro-area">
+        <div class="half-width">
+            <h1>HELLO I'AM <br><span class="skyblue-highlight"> ROB DAVIDSON </span></h1>
+            <p>A full stack allaround designer that placerat <br> in massa consectetur</p>
+            <br>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/login">HIRE ME</a>
 
         </div>
-        <div>
-            
+        <div class="half-width"> 
+            <img src="images/pp_1.png" alt="">
+        </div>
+    </section>
+    <section class="about-area">
+        <div class="half-width">
+            <img src="images/pp_2.png" alt="">
+
+        </div>
+        <div  class="half-width">
+            <h2>ABOUT</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and
+                typesetting industry. Lorem Ipsum has been the industry's
+                standard dummy text ever since the 1500s, when an unknown
+                printer took a galley of type and scrambled it to make a type
+                specimen book.</p>
+              <br>
+              <a class="link-button" target="_blank"href="www.google.com">DOWNLOAD CV</a>
+
+        </div>
+    </section>
+    <section class="working-area">
+        <h2 style="text-align:center"><span class="skyblue-highlight"> LATEST </span> WORKING PROJECT</h2><br>
+        <div  class="one-third-width  working-project">
+            <img src="images/img_1.png" alt="">
+            <h3>Power-x-gym (gym website)</h3>
+            <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry</P>
+        </div>
+        <div  class="one-third-width working-project">
+            <img src="images/img_2.png" alt="">
+            <h3>Creative Agency</h3>        
+            <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</P>
+        </div>
+        <div class="one-third-width  working-project">
+            <img src="images/img_3.png" alt="">
+            <h3>Hard Rock Music</h3>
+            <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry</P>
         </div>
     </section>
 </body>
