--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="intro-area">
+    <section>
         <div class="half-width">
             <h1>HELLO I'AM <br><span class="skyblue-highlight"> ROB DAVIDSON </span></h1>
             <p>A full stack allaround designer that placerat <br> in massa consectetur</p>
@@ -54,6 +54,25 @@
             <img src="images/img_3.png" alt="">
             <h3>Hard Rock Music</h3>
             <P>Lorem Ipsum is simply dummy text of the printing and typesetting industry</P>
+        </div>
+    </section>
+    <section>
+        <h2 style="text-align:center"><span class="skyblue-highlight"> CLIENT'S REVIEW </span></h2><br>
+        <div class="half-width">
+            <p>Special thanks to my amazing photographer and graphic designer, Kim Timothy, at Boutique By Design. She is the wizard behind the camera lens with all my jewellery shots, and my brand goddess. A heart felt thank you for all the work, guidance and technical support you have helped me with over the years, you rock!!</p>
+            <br> <h3>Melissa Caron</h3>
+            <h4>Owner, Melissa Caron Jewelry</h4>
+        </div>
+        <div class="half-width">
+            <p>OMG! I am blown away – my website is amazing! So much more reflective of who I am…I really am so impressed! It has such an open, expansive feel. You are a rock star! Much Kindness</p>
+            <br> <h3>Kressa Sisu</h3>
+            <h4> Owner, Higher Ground</h4>
+        </div>
+    </section>
+    <section class="task-inquiry">
+        <div class="work-inquiry" >
+             <h2 > <span class="white-highlight"> WORK INQUIRY</span></h2> 
+              <a class="chat-button" target="_blank" href="www.faceebook.com">Let's chat</a>     
         </div>
     </section>
 </body>
