review section has been  added

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
     </section>
     <section>
         <h2 style="text-align:center"><span class="skyblue-highlight"> CLIENT'S REVIEW </span></h2><br>
-        <div class="half-width">
+        <div class="half-width review-section">
             <p>Special thanks to my amazing photographer and graphic designer, Kim Timothy, at Boutique By Design. She is the wizard behind the camera lens with all my jewellery shots, and my brand goddess. A heart felt thank you for all the work, guidance and technical support you have helped me with over the years, you rock!!</p>
             <br> <h3>Melissa Caron</h3>
             <h4>Owner, Melissa Caron Jewelry</h4>
         </div>
-        <div class="half-width">
+        <div class="half-width review-section">
             <p>OMG! I am blown away – my website is amazing! So much more reflective of who I am…I really am so impressed! It has such an open, expansive feel. You are a rock star! Much Kindness</p>
             <br> <h3>Kressa Sisu</h3>
             <h4> Owner, Higher Ground</h4>
